[metadata]
name = py34410a-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Unofficial control library for Agilent 34410A multimeter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/py34410a
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6
install_requires =
	pylabdevs-tspspi >= 0.0.11

[options.packages.find]
where = src

[options.entry_points]
